<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bsripkg_talkative</name>
  <version>0.0.0</version>
  <description>CLI to print text to display and generate TTS</description>
  <maintainer email="juanjuo37@gmail.com">juan</maintainer>
  <license>Apache2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend> <!--pkg dependencies added -->
  <depend>std_msgs</depend><!--pkg dependencies added -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
